added fact table

--- a/Tournament/Views/Players/Index.cshtml
+++ b/Tournament/Views/Players/Index.cshtml
@@ -8,7 +8,8 @@
 
 <p>
     @Html.ActionLink("Add a Player", "Create")
-    <p> Total Players: @ViewBag.Count</p>
+    </p>
+<p> Total Players: @ViewBag.Count<br/>
     Active Players: @ViewBag.Active
 </p>
 <table class="table">
