--- a/Tournament/Views/Teams/Index.cshtml
+++ b/Tournament/Views/Teams/Index.cshtml
@@ -8,7 +8,7 @@
 
 <p>
     @Html.ActionLink("Add Team", "Create")<br/>
-    <a href="/Reports/TeamsReport.aspx" >Teams Report</a>
+    @Html.ActionLink("Team Report","TeamReport")
 </p>
 <table class="table-condensed table-striped">
     <tr>
