--- a/Tournament/Views/Teams/Delete.cshtml
+++ b/Tournament/Views/Teams/Delete.cshtml
@@ -13,11 +13,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.id)
+            @Html.DisplayNameFor(model => model.TeamNo)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.id)
+            @Html.DisplayFor(model => model.TeamNo)
         </dd>
 
         <dt>
