--- a/Tournament/Views/Teams/Index.cshtml
+++ b/Tournament/Views/Teams/Index.cshtml
@@ -13,7 +13,7 @@
 <table class="table-condensed table-striped">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.id)
+            @Html.DisplayNameFor(model => model.TeamNo)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Skip)
@@ -40,7 +40,7 @@
     @foreach (var item in Model) {
     <tr>
         <th>
-            @Html.DisplayFor(modelItem => item.id)
+            @Html.DisplayFor(modelItem => item.TeamNo)
         </th>
         <td>
             @Html.DisplayFor(modelItem => item.Player.FullName)
