--- a/Tournament/Views/Matches/Create.cshtml
+++ b/Tournament/Views/Matches/Create.cshtml
@@ -16,9 +16,9 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.GameDate, "GameDate", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.RoundId, "GameDate", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("GameDate", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("RoundId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.RoundId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -32,18 +32,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Team1, "Team 1", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TeamNo1, "Team 1", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Team1", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Team1, "", new { @class = "text-danger" })
+                @Html.DropDownList("TeamNo1", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.TeamNo1, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Team2, "Team 2", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TeamNo2, "Team 2", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Team2", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Team2, "", new { @class = "text-danger" })
+                @Html.DropDownList("TeamNo2", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.TeamNo2, "", new { @class = "text-danger" })
             </div>
         </div>
 
