--- a/Tournament/Views/Schedules/Delete.cshtml
+++ b/Tournament/Views/Schedules/Delete.cshtml
@@ -8,15 +8,31 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Tournament Schedule</h4>
+    <h4>Tournament Schedule for @Model.League.LeagueName</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.RoundNo)
+            @Html.DisplayNameFor(model => model.RoundName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.RoundNo)
+            @Html.DisplayFor(model => model.RoundName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SortOrder)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SortOrder)
+        </dd>
+        
+        <dt>
+            @Html.DisplayNameFor(model => model.Cancelled)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Cancelled)
         </dd>
 
     </dl>
