--- a/Tournament/Views/Teams/Create.cshtml
+++ b/Tournament/Views/Teams/Create.cshtml
@@ -15,11 +15,12 @@
     <h4>Team</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model=>model.Leagueid)
     <div class="form-group">
-        @Html.LabelFor(model => model.id, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TeamNo, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.id, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.id, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.TeamNo, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TeamNo, "", new { @class = "text-danger" })
         </div>
     </div>
 
