--- a/Tournament/Views/Teams/Edit.cshtml
+++ b/Tournament/Views/Teams/Edit.cshtml
@@ -17,11 +17,13 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.id)
     @Html.HiddenFor(model => model.Skip)
+    @Html.HiddenFor(model=>model.Leagueid)
 
     <div class="form-group">
-        @Html.LabelFor(model => model.id, "Team Number", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TeamNo, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Model.id
+            @Html.EditorFor(model => model.TeamNo, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TeamNo, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -32,7 +34,7 @@
         </div>
     </div>
 @{
-    if ((int) ViewBag.TeamSize > 1)
+    if ((int) ViewBag.TeamSize > 2)
     {
         <div class="form-group">
             @Html.LabelFor(model => model.ViceSkip, "Vice Skip", htmlAttributes: new {@class = "control-label col-md-2"})
@@ -50,7 +52,7 @@
 }
 
 @{
-    if ((int) ViewBag.TeamSize > 2)
+    if ((int) ViewBag.TeamSize > 1)
     {
         <div class="form-group">
             @Html.LabelFor(model => model.Lead, "Lead", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -114,7 +116,7 @@
             @Html.DisplayFor(modelItem => item.Player.FullName)
         </td>
     
-        if ((int) ViewBag.TeamSize > 2)
+        @if ((int) ViewBag.TeamSize > 2)
         {
 
             <td>
@@ -122,7 +124,7 @@
             </td>
         }
 
-        if ((int) ViewBag.TeamSize > 1)
+        @if ((int) ViewBag.TeamSize > 1)
         {
 
             <td>
