--- a/Tournament/Views/Leagues/Index.cshtml
+++ b/Tournament/Views/Leagues/Index.cshtml
@@ -31,7 +31,8 @@
         </td>
         
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) 
+            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
+            @Html.ActionLink("League Administrators", "Index", "UserLeagues", new { id = item.id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.id })
         </td>
     </tr>
