--- a/Tournament/Views/UserLeagues/Create.cshtml
+++ b/Tournament/Views/UserLeagues/Create.cshtml
@@ -15,7 +15,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.UserId, "UserId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UserId, "User", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("UserId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
@@ -23,10 +23,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.LeagueId, "LeagueId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.LeagueId, "League Name", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("LeagueId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.LeagueId, "", new { @class = "text-danger" })
+                @ViewBag.LeagueName
             </div>
         </div>
 
@@ -47,5 +46,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new {id=ViewBag.LeagueId})
 </div>
