--- a/Tournament/Views/Players/Delete.cshtml
+++ b/Tournament/Views/Players/Delete.cshtml
@@ -5,10 +5,10 @@
 }
 
 <h2>Delete</h2>
-
+<p class="error">@ViewBag.ConcurrencyErrorMessage</p>
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Player in @Model.League.LeagueName</h4>
+    <h4>@Model.League.LeagueName Player</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -61,8 +61,11 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.id)
+        @Html.HiddenFor(model => model.rowversion)
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
