--- a/Tournament/Views/Players/Edit.cshtml
+++ b/Tournament/Views/Players/Edit.cshtml
@@ -12,11 +12,12 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Player</h4>
+        <h4>@ViewBag.LeagueName Player</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
         @Html.HiddenFor(model=>model.Leagueid)
+        @Html.HiddenFor(model=>model.rowversion)
 
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
