--- a/Tournament/Views/Players/Index.cshtml
+++ b/Tournament/Views/Players/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>@ViewBag.LeagueName Players</h2>
 
 <p>
     @Html.ActionLink("Add a Player", "Create")
