--- a/Tournament/Views/Schedules/Create.cshtml
+++ b/Tournament/Views/Schedules/Create.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Tournament Schedule</h4>
+    <h4>Tournament Scheduled Round for @ViewBag.LeagueName</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Leagueid)
