--- a/Tournament/Views/Schedules/Delete.cshtml
+++ b/Tournament/Views/Schedules/Delete.cshtml
@@ -5,10 +5,11 @@
 }
 
 <h2>Delete</h2>
+<p class="error">@ViewBag.ConcurrencyErrorMessage</p>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Tournament Schedule for @Model.League.LeagueName</h4>
+    <h4>Tournament Scheduled Round for @Model.League.LeagueName</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -26,7 +27,7 @@
         <dd>
             @Html.DisplayFor(model => model.SortOrder)
         </dd>
-        
+
         <dt>
             @Html.DisplayNameFor(model => model.Cancelled)
         </dt>
@@ -37,8 +38,11 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.id)
+        @Html.HiddenFor(model => model.rowversion)
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
