--- a/Tournament/Views/Teams/Edit.cshtml
+++ b/Tournament/Views/Teams/Edit.cshtml
@@ -12,68 +12,69 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Team</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.id)
-    @Html.HiddenFor(model => model.Skip)
-    @Html.HiddenFor(model=>model.Leagueid)
+    <h4>@ViewBag.LeagueName Team</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.id)
+        @Html.HiddenFor(model => model.Skip)
+        @Html.HiddenFor(model => model.Leagueid)
+        @Html.HiddenFor(model => model.rowversion)
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.TeamNo, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.TeamNo, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.TeamNo, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Skip, "Skip", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Model.Player.FullName
-        </div>
-    </div>
-@{
-    if ((int) ViewBag.TeamSize > 2)
-    {
         <div class="form-group">
-            @Html.LabelFor(model => model.ViceSkip, "Vice Skip", htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.TeamNo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ViceSkip", null, htmlAttributes: new {@class = "form-control"})
-                @Html.ValidationMessageFor(model => model.ViceSkip, "", new {@class = "text-danger"})
+                @Html.EditorFor(model => model.TeamNo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TeamNo, "", new { @class = "text-danger" })
             </div>
         </div>
-    }
-    else
-    {
 
-        @Html.HiddenFor(model => model.ViceSkip)
-    }
-}
-
-@{
-    if ((int) ViewBag.TeamSize > 1)
-    {
         <div class="form-group">
-            @Html.LabelFor(model => model.Lead, "Lead", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Skip, "Skip", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Lead", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Lead, "", new { @class = "text-danger" })
+                @Model.Player.FullName
             </div>
         </div>
-    }
-    else
-    {
+        @{
+            if ((int)ViewBag.TeamSize > 2)
+            {
+                <div class="form-group">
+                    @Html.LabelFor(model => model.ViceSkip, "Vice Skip", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownList("ViceSkip", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.ViceSkip, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            }
+            else
+            {
 
-        @Html.HiddenFor(model => model.Lead)
-    }
-}
+                @Html.HiddenFor(model => model.ViceSkip)
+            }
+        }
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+        @{
+            if ((int)ViewBag.TeamSize > 1)
+            {
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Lead, "Lead", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownList("Lead", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Lead, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            }
+            else
+            {
+
+                @Html.HiddenFor(model => model.Lead)
+            }
+        }
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
         </div>
-    </div>
 </div>
 }
 
