--- a/Tournament/Views/Matches/ByesReport.cshtml
+++ b/Tournament/Views/Matches/ByesReport.cshtml
@@ -5,9 +5,17 @@
 }
 
 <h2>Byes Report</h2>
-@Html.ActionLink("Back to Home", "Index","Home")
-
-@Html.ReportViewer(
-    ViewBag.ReportViewer as Microsoft.Reporting.WebForms.ReportViewer,
-    new { scrolling = "no" })
+<table>
+<tr>
+    <td>
+        <a href="/Home/Index">Back to Home Page</a>
+</tr>
+<tr>
+    <td>
+        @Html.ReportViewer(
+            ViewBag.ReportViewer as Microsoft.Reporting.WebForms.ReportViewer,
+            new { scrolling = "no" })
+    </td>
+</tr>
+</table>
 
