--- a/Tournament/ReportFiles/Standings.rdlc
+++ b/Tournament/ReportFiles/Standings.rdlc
@@ -45,6 +45,10 @@
           <DataField>Rink</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
+        <Field Name="Forfeit">
+          <DataField>Forfeit</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>LeaguesDS</rd:DataSetName>
@@ -152,10 +156,13 @@
                 <TablixColumn>
                   <Width>0.47917in</Width>
                 </TablixColumn>
+                <TablixColumn>
+                  <Width>0.72917in</Width>
+                </TablixColumn>
               </TablixColumns>
               <TablixRows>
                 <TablixRow>
-                  <Height>0.25in</Height>
+                  <Height>0.39583in</Height>
                   <TablixCells>
                     <TablixCell>
                       <CellContents>
@@ -185,6 +192,7 @@
                               <Color>Black</Color>
                               <Width>2.5pt</Width>
                             </RightBorder>
+                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -212,11 +220,15 @@
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox5</rd:DefaultName>
+                          <Visibility>
+                            <Hidden>=Parameters!IsCancelled.Value="1"</Hidden>
+                          </Visibility>
                           <Style>
                             <Border>
                               <Color>LightGrey</Color>
                               <Style>Solid</Style>
                             </Border>
+                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -249,6 +261,7 @@
                               <Color>LightGrey</Color>
                               <Style>Solid</Style>
                             </Border>
+                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -281,6 +294,7 @@
                               <Color>LightGrey</Color>
                               <Style>Solid</Style>
                             </Border>
+                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -317,6 +331,7 @@
                               <Color>Black</Color>
                               <Width>2.5pt</Width>
                             </LeftBorder>
+                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -349,6 +364,7 @@
                               <Color>LightGrey</Color>
                               <Style>Solid</Style>
                             </Border>
+                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -376,6 +392,39 @@
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox16</rd:DefaultName>
+                          <Style>
+                            <Border>
+                              <Color>LightGrey</Color>
+                              <Style>Solid</Style>
+                            </Border>
+                            <VerticalAlign>Bottom</VerticalAlign>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
+                    <TablixCell>
+                      <CellContents>
+                        <Textbox Name="Textbox9">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value>Team Forfeiting</Value>
+                                  <Style>
+                                    <FontWeight>Bold</FontWeight>
+                                  </Style>
+                                </TextRun>
+                              </TextRuns>
+                              <Style />
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>Textbox9</rd:DefaultName>
                           <Style>
                             <Border>
                               <Color>LightGrey</Color>
@@ -612,12 +661,46 @@
                         </Textbox>
                       </CellContents>
                     </TablixCell>
+                    <TablixCell>
+                      <CellContents>
+                        <Textbox Name="Forfeit">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value>=Fields!Forfeit.Value</Value>
+                                  <Style />
+                                </TextRun>
+                              </TextRuns>
+                              <Style>
+                                <TextAlign>Right</TextAlign>
+                              </Style>
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>Forfeit</rd:DefaultName>
+                          <Style>
+                            <Border>
+                              <Color>LightGrey</Color>
+                              <Style>Solid</Style>
+                            </Border>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                        <rd:Selected>true</rd:Selected>
+                      </CellContents>
+                    </TablixCell>
                   </TablixCells>
                 </TablixRow>
               </TablixRows>
             </TablixBody>
             <TablixColumnHierarchy>
               <TablixMembers>
+                <TablixMember />
                 <TablixMember />
                 <TablixMember />
                 <TablixMember />
@@ -640,8 +723,11 @@
             <DataSetName>Game</DataSetName>
             <Top>0.36333in</Top>
             <Left>0.01958in</Left>
-            <Height>0.5in</Height>
-            <Width>6.58334in</Width>
+            <Height>0.64583in</Height>
+            <Width>7.31251in</Width>
+            <Visibility>
+              <Hidden>=Parameters!IsCancelled.Value="1"</Hidden>
+            </Visibility>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -1076,7 +1162,7 @@
               </TablixMembers>
             </TablixRowHierarchy>
             <DataSetName>Stand</DataSetName>
-            <Top>1.905in</Top>
+            <Top>2.03in</Top>
             <Left>0.03in</Left>
             <Height>0.5in</Height>
             <Width>5.20959in</Width>
@@ -1140,7 +1226,7 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>Textbox4</rd:DefaultName>
-            <Top>1.55777in</Top>
+            <Top>1.68277in</Top>
             <Height>0.25in</Height>
             <Width>5.23959in</Width>
             <ZIndex>3</ZIndex>
@@ -1155,10 +1241,9 @@
             </Style>
           </Textbox>
           <Line Name="Line1">
-            <Top>1.50221in</Top>
-            <Left>0.03in</Left>
+            <Top>1.68277in</Top>
             <Height>0in</Height>
-            <Width>6.65625in</Width>
+            <Width>7.33209in</Width>
             <ZIndex>4</ZIndex>
             <Style>
               <Border>
@@ -1395,12 +1480,12 @@
               </TablixMembers>
             </TablixRowHierarchy>
             <DataSetName>Bye</DataSetName>
-            <Top>0.89458in</Top>
+            <Top>1.12in</Top>
             <Height>0.5in</Height>
             <Width>3.05083in</Width>
             <ZIndex>5</ZIndex>
             <Visibility>
-              <Hidden>=Parameters!IsBye.Value="0"</Hidden>
+              <Hidden>=Parameters!IsBye.Value="0" or Parameters!IsCancelled.Value="1"</Hidden>
             </Visibility>
             <Style>
               <Border>
@@ -1409,10 +1494,10 @@
             </Style>
           </Tablix>
         </ReportItems>
-        <Height>2.98833in</Height>
+        <Height>2.57166in</Height>
         <Style />
       </Body>
-      <Width>6.68625in</Width>
+      <Width>7.33209in</Width>
       <Page>
         <PageHeader>
           <Height>0.625in</Height>
@@ -1426,7 +1511,7 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>="Standing for Week " + Parameters!WeekDate.Value</Value>
+                      <Value>="Standing for Round " + Parameters!WeekDate.Value</Value>
                       <Style>
                         <FontSize>14pt</FontSize>
                         <FontWeight>Bold</FontWeight>
@@ -1459,7 +1544,7 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>=Parameters!League.Value + " League"</Value>
+                      <Value>=Parameters!Description.Value</Value>
                       <Style>
                         <FontSize>14pt</FontSize>
                         <FontWeight>Bold</FontWeight>
@@ -1494,8 +1579,8 @@
             </Border>
           </Style>
         </PageHeader>
-        <LeftMargin>1in</LeftMargin>
-        <RightMargin>1in</RightMargin>
+        <LeftMargin>0.5in</LeftMargin>
+        <RightMargin>0.5in</RightMargin>
         <TopMargin>1in</TopMargin>
         <BottomMargin>1in</BottomMargin>
         <Style />
@@ -1507,11 +1592,15 @@
       <DataType>String</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
-    <ReportParameter Name="League">
+    <ReportParameter Name="IsCancelled">
       <DataType>String</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
     <ReportParameter Name="IsBye">
+      <DataType>String</DataType>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="Description">
       <DataType>String</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
@@ -1529,12 +1618,17 @@
         <CellDefinition>
           <ColumnIndex>1</ColumnIndex>
           <RowIndex>0</RowIndex>
-          <ParameterName>League</ParameterName>
+          <ParameterName>IsCancelled</ParameterName>
         </CellDefinition>
         <CellDefinition>
           <ColumnIndex>0</ColumnIndex>
           <RowIndex>1</RowIndex>
           <ParameterName>IsBye</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>1</ColumnIndex>
+          <RowIndex>1</RowIndex>
+          <ParameterName>Description</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
