--- a/Tournament/Views/Matches/Index.cshtml
+++ b/Tournament/Views/Matches/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using System.Web.UI.WebControls
+﻿@using System.Security.AccessControl
+@using System.Web.UI.WebControls
 @using Tournament.Extensions
 @model IEnumerable<Tournament.Models.Match>
 
@@ -18,8 +19,8 @@
 <br />
 
 <p>
-    <a href="/Reports/Scoring.aspx?weekid=@ViewBag.RoundId" >This week's standings report</a><br/>
-    <a href="/Reports/ScoreCards.aspx?&weekid=@ViewBag.RoundId" >This week's score cards</a>
+    @Html.ActionLink("This week's standings report", "StandingsReport", new {id = ViewBag.RoundId })<br/>
+    @Html.ActionLink("This week's score cards", "ScoreCardReport", new {id= ViewBag.RoundId })
 </p>
 
 <table class="table-condensed table-striped">
@@ -45,6 +46,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Team2Score)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ForFeitId)
+        </th>
         <th></th>
     </tr>
     @{ var id = 0;}
@@ -66,23 +70,67 @@
             @Html.DisplayFor(modelItem => item.Schedule.RoundName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Team.id)&nbsp; (@Html.DisplayFor(modelItem => item.Team.Player.NickName),@Html.DisplayFor(modelItem => item.Team.Player1.NickName),@Html.DisplayFor(modelItem => item.Team.Player2.NickName) )
-        </td>
+            @{
+                switch ((int)ViewBag.TeamSize)
+                {
+                    case 1:
+                        @Html.Raw($"{item.Team.TeamNo} ({item.Team.Player.NickName})");
+                        break;
+                    case 2:
+                        @Html.Raw($"{item.Team.TeamNo} ({item.Team.Player.NickName}, {item.Team.Player2.NickName})");
+                        break;
+                    case 3:
+                        @Html.Raw($"{item.Team.TeamNo} ({item.Team.Player.NickName}, {item.Team.Player1.NickName}, {item.Team.Player2.NickName})");
+                        break;
+                }
+            }
+
+         </td>
+        
+                <td>
+                    @{
+                        switch ((int)ViewBag.TeamSize)
+                        {
+                            case 1:
+                                @Html.Raw($"{item.Team1.TeamNo} ({item.Team1.Player.NickName})");
+                                break;
+                            case 2:
+                                @Html.Raw($"{item.Team1.TeamNo} ({item.Team1.Player.NickName}, {item.Team1.Player2.NickName})");
+                                break;
+                            case 3:
+                                @Html.Raw($"{item.Team1.TeamNo} ({item.Team1.Player.NickName}, {item.Team1.Player1.NickName}, {item.Team1.Player2.NickName})");
+                                break;
+                        }
+                    }
+                </td>
+        
+                <td>
+                    @Html.DisplayFor(modelItem => item.Team1Score)
+                </td>
+        
+                <td>
+                    @Html.DisplayFor(modelItem => item.Team2Score)
+                </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Team1.id) &nbsp;(@Html.DisplayFor(modelItem => item.Team1.Player.NickName),@Html.DisplayFor(modelItem => item.Team1.Player1.NickName),@Html.DisplayFor(modelItem => item.Team1.Player2.NickName) )
+            @if (item.ForFeitId != 0)
+            {
+                if (item.Team.id == item.ForFeitId)
+                {
+                    @Html.Raw(item.Team.TeamNo)
+                }
+                else
+                {
+                    @Html.Raw(item.Team1.TeamNo)
+                }
+            }
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Team1Score)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Team2Score)
-        </td>
-        <td>
-           @Html.ActionLink("Scoring", "Scoring", new { id = item.id })
-        </td>
-    </tr>
-        id++;
-    }
+                <td>
+                   @Html.ActionLink("Scoring", "Scoring", new { id = item.id })
+                </td>
+        
+            </tr>
+                id++;
+                }
 
 </table>
 
@@ -90,17 +138,5 @@
 
 
 @section Scripts {
-    <script type="text/javascript">
-        $(document).ready(function(){
-
-            $("#ScheduleID").change(function(){
-
-                var selected = $("#ScheduleID option:selected").val();
-                $("#Create").attr('href',"Matches/Create/" + selected);
-
-            });
-
-        });
-
-    </script>
+    @Scripts.Render("~/bundles/jqueryval")
 }
