--- a/Tournament/Views/Matches/Scoring.cshtml
+++ b/Tournament/Views/Matches/Scoring.cshtml
@@ -37,30 +37,49 @@
         </div>
     </div>
 
+    
+   
+
     <div class="form-group">
-        @Html.LabelFor(model => model.TeamNo1, "Team 1", htmlAttributes: new { @class = "control-label col-md-2" })
+        @{
+            string players="";
+            switch ((int)ViewBag.TeamSize)
+            {
+                case 1:
+                    players = $"Team #{Model.Team.TeamNo} Score ({Model.Team.Player.NickName})";
+                    break;
+                case 2:
+                    players = $"Team #{Model.Team.TeamNo} Score ({Model.Team.Player.NickName}, {Model.Team.Player2.NickName})";
+                    break;
+                case 3:
+                    players = $"Team #{Model.Team.TeamNo} Score ({Model.Team.Player.NickName}, {Model.Team.Player1.NickName}, {Model.Team.Player2.NickName})";
+                    break;
+            }
+        }
+        @Html.Label(players, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Model.TeamNo1 &nbsp; &nbsp;(Skip: @Model.Team.Player.NickName)
+            @Html.EditorFor(model => model.Team1Score, new {htmlAttributes = new {@class = "form-control"}})
+            @Html.ValidationMessageFor(model => model.Team1Score, "", new {@class = "text-danger"})
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.TeamNo2, "Team2 ", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Model.TeamNo2 &nbsp;&nbsp;(Skip: @Model.Team1.Player.NickName)
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Team1Score, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Team1Score, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Team1Score, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Team2Score, htmlAttributes: new { @class = "control-label col-md-2" })
+        @{
+            string players1="";
+            switch ((int)ViewBag.TeamSize)
+            {
+                case 1:
+                    players1 = $"Team #{Model.Team1.TeamNo} Score ({Model.Team1.Player.NickName})";
+                    break;
+                case 2:
+                    players1 = $"Team #{Model.Team1.TeamNo} Score ({Model.Team1.Player.NickName}, {Model.Team1.Player2.NickName})";
+                    break;
+                case 3:
+                    players1 = $"Team #{Model.Team1.TeamNo} Score ({Model.Team1.Player.NickName}, {Model.Team1.Player1.NickName}, {Model.Team.Player2.NickName})";
+                    break;
+            }
+        }
+        @Html.Label(players1, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Team2Score, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Team2Score, "", new { @class = "text-danger" })
@@ -68,10 +87,10 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Forfeit, "Team Forfeiting", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.ForFeitId, "Team Forfeiting", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("Forfeit", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.Forfeit, "", new { @class = "text-danger" })
+            @Html.DropDownList("ForFeitId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.ForFeitId, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -91,13 +110,12 @@
     @Scripts.Render("~/bundles/jqueryval")
     <script type="text/javascript">
         $(document).ready(function() {
-            switch ($("#Forfeit").find(":selected").val()) {
-            case "1":
+            switch ($("#ForFeitId").find(":selected").val()) {
+            case "0":
                 $("#Team1Score").prop('disabled', false);
                 $("#Team2Score").prop('disabled', false);
                 break;
-            case "2":
-            case "3":
+            default:
                 $("#Team1Score").val(0);
                 $("#Team2Score").val(0);
                 $("#Team1Score").prop('disabled', true);
@@ -106,14 +124,13 @@
             }
         });
 
-        $('#Forfeit').change(function() {
+        $('#ForFeitId').change(function() {
             switch ($(this).find(":selected").val()) {
-            case "1":
+            case "0":
                 $("#Team1Score").prop('disabled', false);
                 $("#Team2Score").prop('disabled', false);
                 break;
-            case "2":
-            case "3":
+            default:
                 $("#Team1Score").val(0);
                 $("#Team2Score").val(0);
                 $("#Team1Score").prop('disabled', true);
