finished user roles

--- a/Tournament/Views/Leagues/Index.cshtml
+++ b/Tournament/Views/Leagues/Index.cshtml
@@ -32,7 +32,7 @@
         
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("League Administrators", "Index", "UserLeagues", new { id = item.id }, null) |
+            @Html.ActionLink("League Users", "Index", "UserLeagues", new { id = item.id }, null) |
             @Html.ActionLink("Delete", "Delete", new { id=item.id })
         </td>
     </tr>
