--- a/Tournament/Views/Matches/Index.cshtml
+++ b/Tournament/Views/Matches/Index.cshtml
@@ -19,15 +19,21 @@
 <br />
 
 <p>
-    @Html.ActionLink("This week's standings report", "StandingsReport", new {id = ViewBag.RoundId })<br/>
-    @Html.ActionLink("This week's score cards", "ScoreCardReport", new {id= ViewBag.RoundId })
+    @Html.ActionLink("This week's standings report", "StandingsReport", new { id = ViewBag.RoundId })<br />
+    @Html.ActionLink("This week's score cards", "ScoreCardReport", new { id = ViewBag.RoundId })
 </p>
 
 <table class="table-condensed table-striped">
     <tr>
         <th>
-            Exchange Rink
-        </th>
+        @{
+            if(HttpContext.Current.User.IsInRole("Admin") ||
+                HttpContext.Current.User.IsInRole("LeagueAdmin") )
+            {
+                @Html.Raw("Exchange Rink") 
+            }
+        }
+            </th>
         <th>
             @Html.DisplayNameFor(model => model.Rink)
         </th>
@@ -54,83 +60,92 @@
     @{ var id = 0;}
     @foreach (var item in Model)
     {
-    <tr>
-        <td>
-            @{
-                if (@id > 0)
-                {
-                    @Html.ActionImage("MoveUp", new { id = id, weekid = ViewBag.WeekID }, "~/Content/Images/uparrow.png", "Move Up one rink");
-                }
-            }
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rink)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Schedule.RoundName)
-        </td>
-        <td>
-            @{
-                switch ((int)ViewBag.TeamSize)
-                {
-                    case 1:
-                        @Html.Raw($"{item.Team.TeamNo} ({item.Team.Player.NickName})");
-                        break;
-                    case 2:
-                        @Html.Raw($"{item.Team.TeamNo} ({item.Team.Player.NickName}, {item.Team.Player2.NickName})");
-                        break;
-                    case 3:
-                        @Html.Raw($"{item.Team.TeamNo} ({item.Team.Player.NickName}, {item.Team.Player1.NickName}, {item.Team.Player2.NickName})");
-                        break;
-                }
-            }
-
-         </td>
-        
-                <td>
-                    @{
-                        switch ((int)ViewBag.TeamSize)
-                        {
-                            case 1:
-                                @Html.Raw($"{item.Team1.TeamNo} ({item.Team1.Player.NickName})");
-                                break;
-                            case 2:
-                                @Html.Raw($"{item.Team1.TeamNo} ({item.Team1.Player.NickName}, {item.Team1.Player2.NickName})");
-                                break;
-                            case 3:
-                                @Html.Raw($"{item.Team1.TeamNo} ({item.Team1.Player.NickName}, {item.Team1.Player1.NickName}, {item.Team1.Player2.NickName})");
-                                break;
-                        }
+        <tr>
+            <td>
+                @{
+                    if(id > 0 && (HttpContext.Current.User.IsInRole("Admin") ||
+                                    HttpContext.Current.User.IsInRole("LeagueAdmin"))) 
+                    {
+                        @Html.ActionImage("MoveUp", new { id = id, weekid = ViewBag.WeekID }, "~/Content/Images/uparrow.png", "Move Up one rink");
                     }
-                </td>
-        
-                <td>
-                    @Html.DisplayFor(modelItem => item.Team1Score)
-                </td>
-        
-                <td>
-                    @Html.DisplayFor(modelItem => item.Team2Score)
-                </td>
-        <td>
-            @if (item.ForFeitId != 0)
-            {
-                if (item.Team.id == item.ForFeitId)
+                }
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rink)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Schedule.RoundName)
+            </td>
+            <td>
+                @{
+                    switch ((int)ViewBag.TeamSize)
+                    {
+                        case 1:
+                            @Html.Raw($"{item.Team.TeamNo} ({item.Team.Player.NickName})");
+                            break;
+                        case 2:
+                            @Html.Raw($"{item.Team.TeamNo} ({item.Team.Player.NickName}, {item.Team.Player2.NickName})");
+                            break;
+                        case 3:
+                            @Html.Raw($"{item.Team.TeamNo} ({item.Team.Player.NickName}, {item.Team.Player1.NickName}, {item.Team.Player2.NickName})");
+                            break;
+                    }
+                }
+
+            </td>
+
+            <td>
+                @{
+                    switch ((int)ViewBag.TeamSize)
+                    {
+                        case 1:
+                            @Html.Raw($"{item.Team1.TeamNo} ({item.Team1.Player.NickName})");
+                            break;
+                        case 2:
+                            @Html.Raw($"{item.Team1.TeamNo} ({item.Team1.Player.NickName}, {item.Team1.Player2.NickName})");
+                            break;
+                        case 3:
+                            @Html.Raw($"{item.Team1.TeamNo} ({item.Team1.Player.NickName}, {item.Team1.Player1.NickName}, {item.Team1.Player2.NickName})");
+                            break;
+                    }
+                }
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.Team1Score)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.Team2Score)
+            </td>
+            <td>
+                @if (item.ForFeitId != 0)
                 {
-                    @Html.Raw(item.Team.TeamNo)
+                    if (item.Team.id == item.ForFeitId)
+                    {
+                        @Html.Raw(item.Team.TeamNo)
+                    }
+                    else
+                    {
+                        @Html.Raw(item.Team1.TeamNo)
+                    }
                 }
-                else
-                {
-                    @Html.Raw(item.Team1.TeamNo)
+            </td>
+            <td>
+                @{
+                    if (HttpContext.Current.User.IsInRole("Admin") ||
+                        HttpContext.Current.User.IsInRole("LeagueAdmin") ||
+                        HttpContext.Current.User.IsInRole("Scorer"))
+                    {
+                        @Html.ActionLink("Scoring", "Scoring", new { id = item.id })
+                    }
+                    id++;
                 }
-            }
-        </td>
-                <td>
-                   @Html.ActionLink("Scoring", "Scoring", new { id = item.id })
-                </td>
-        
-            </tr>
-                id++;
-                }
+            </td>
+
+        </tr>
+
+    }
 
 </table>
 
