--- a/Tournament/Views/Teams/Index.cshtml
+++ b/Tournament/Views/Teams/Index.cshtml
@@ -7,8 +7,14 @@
 <h2>@ViewBag.LeagueName Teams</h2>
 
 <p>
-    @Html.ActionLink("Add Team", "Create")<br/>
-    @Html.ActionLink("Team Report","TeamReport")
+@{
+    if (HttpContext.Current.User.IsInRole("Admin") ||
+        HttpContext.Current.User.IsInRole("LeagueAdmin"))
+    {
+        @Html.ActionLink("Add Team", "Create")<br/>
+    }
+}
+    @Html.ActionLink("Team Report", "TeamReport")
 </p>
 <table class="table-condensed table-striped">
     <tr>
@@ -58,33 +64,40 @@
         </td>
     }
         <td>
-        @if ((int) ViewBag.TeamSize > 1)
-        {
-            @Html.ActionLink("Edit", "Edit", new {id = item.id})
+        @{
+            if (HttpContext.Current.User.IsInRole("Admin") ||
+                HttpContext.Current.User.IsInRole("LeagueAdmin"))
+            {
+                if ((int) ViewBag.TeamSize > 1)
+                 {
+                     @Html.ActionLink("Edit", "Edit", new {id = item.id})
+                 }
+                if ((int) ViewBag.TeamSize > 1)
+                 {
+                     @Html.Raw(" | ")
+                 }
+
+                @Html.ActionLink("Delete", "Delete", new {id = item.id}) 
+                @Html.Raw(" | ")
+
+
+                if((int) ViewBag.TeamSize > 2)
+                {
+                    @Html.ActionLink("Remove Vice Skip", "RemoveViceSkip", new {id = item.id, rowversion = System.Text.Encoding.Default.GetString(item.rowversion)})
+                }
+                if((int) ViewBag.TeamSize > 2)
+                {
+                    @Html.Raw(" | ")
+                }
+
+
+                if((int) ViewBag.TeamSize > 1)
+                {
+                    @Html.ActionLink("Remove Lead", "RemoveLead", new {id = item.id, rowversion = System.Text.Encoding.Default.GetString(item.rowversion)})
+                }
+            }
         }
-            @if ((int) ViewBag.TeamSize > 1)
-            {
-                @Html.Raw("|")
-            }
-
-            @Html.ActionLink("Delete", "Delete", new {id = item.id}) |
-
-
-            @if ((int) ViewBag.TeamSize > 2)
-            {
-                @Html.ActionLink("Remove Vice Skip", "RemoveViceSkip", new {id = item.id, rowversion= System.Text.Encoding.Default.GetString(item.rowversion)})
-            }
-            @if ((int) ViewBag.TeamSize > 2)
-            {
-                @Html.Raw("|")
-            }
-
-
-            @if ((int) ViewBag.TeamSize > 1)
-            {
-                @Html.ActionLink("Remove Lead", "RemoveLead", new {id = item.id, rowversion = System.Text.Encoding.Default.GetString(item.rowversion) })
-            }
-        </td>
+            </td>
     </tr>
     }
 
