--- a/Tournament/Views/UserLeagues/Edit.cshtml
+++ b/Tournament/Views/UserLeagues/Edit.cshtml
@@ -29,9 +29,9 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Roles, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Roles, "Role", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Roles, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.DropDownList("Roles", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Roles, "", new { @class = "text-danger" })
         </div>
     </div>
